--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,43 @@
     " \n",
     "df = pd.DataFrame({'Speech':files, 'Date':dates, 'Location':locations, 'Year':years, 'Month':months, 'Day':days, 'Speech_Text':speeches_text})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from preprocessing import preprocessing_pipline\n",
+    "\n",
+    "preprocessing = preprocessing_pipline(df['Speech_Text'])\n",
+    "df['Speech_Text'] = preprocessing.preprocess_light()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Baseline model for the competition. This model is a simple linear regression model that uses the average of the"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Model:\n",
+    "    def __init__(self, text_data, model, tokenizer, max_length=50):\n",
+    "        self.text_data = text_data\n",
+    "        self.model = model\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.max_length = max_length\n",
+    "         \n",
+    "    def generate_text(self, seed_text, next_words):\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +104,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
