--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -42,16 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading the data, .txt files\n",
+    "# Loading the data\n",
     "import os\n",
     "\n",
     "path = 'Trump Rally Speeches/'\n",
     "files = os.listdir(path)\n",
     "files = [path + file for file in files]\n",
     " \n",
-    "# example of a file name CharlestonFeb28_2020.txt, we want to extract the date and location, the text is the speech\n",
-    "\n",
-    "# Extracting the date and location from the file name\n",
+    "# Empty lists to store the data\n",
     "dates = []\n",
     "locations = []\n",
     "years = []\n",
