--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -54,22 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "from preprocessing import preprocessing_pipline\n",
     "\n",
-    "#preprocessing = preprocessing_pipline(df['Speech_Text'])\n",
-    "#df['Speech_Text'] = preprocessing.preprocess_light()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Baseline model for the competition. This model is a simple linear regression model that uses the average of the"
+    "preprocessing = preprocessing_pipline(df['Speech_Text'])\n",
+    "df['Speech_Text_prepro'] = preprocessing.preprocess_light()"
    ]
   },
   {
@@ -110,14 +102,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['go', 'going', 'alabama', 'privilege', 'say', 'joe', 'understand', 'soo', 'special', 'every']\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "text_corpus = [word for speech in df['Speech_Text'].str.split() for word in speech]\n",
-    "train_corpus, test_corpus = train_test_split(text_corpus, test_size=0.2, random_state=42)"
+    "train_corpus, test_corpus = train_test_split(text_corpus, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Preprocess text \n",
+    "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
+    "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)\n",
+    "# some preprocessed text;\n",
+    "print(train_corpus_prepro[:10])"
    ]
   },
   {
@@ -251,11 +257,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N = 2 Perplexity: 3146.029000302403\n",
+      "N = 3 Perplexity: 3886.032907464139\n",
+      "N = 4 Perplexity: 3889.3496831546913\n",
+      "N = 5 Perplexity: 3889.3496505377457\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with preprocessing\n",
+    "for n in range(2, 6):\n",
+    "    ngram_model = my_model_NGram(n=n, text_corpus=train_corpus_prepro)\n",
+    "    perplexity = ngram_model.calculate_perplexity(test_corpus_prepro)\n",
+    "    print(\"N =\", n, \"Perplexity:\", perplexity)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our best perplexity 3380 with N = 2"
+    "Our best perplexity 3380 with N = 2 without preprocessing\n",
+    "And with preprocessing we have 3146 with N = 2 and better value for any other N"
    ]
   },
   {
@@ -276,9 +307,9 @@
    ],
    "source": [
     "# try different seed no random\n",
-    "seed_text = [\"I want to\", \"I will do\"]\n",
+    "seeds = [\"I want to\", \"I will do\"]\n",
     "ngram_model = my_model_NGram(n=3, text_corpus=train_corpus)\n",
-    "for seed in seed_text:\n",
+    "for seed in seeds:\n",
     "    generated_text = ngram_model.generate_text(seed, max_length=20)\n",
     "    print(\"Seed text:\", seed)\n",
     "    print(\"Generated Text:\", generated_text)\n",
@@ -304,7 +335,7 @@
    "source": [
     "# with random\n",
     "ngram_model = my_model_NGram(n=3, text_corpus=train_corpus)\n",
-    "for seed in seed_text:\n",
+    "for seed in seeds:\n",
     "    generated_text = ngram_model.generate_text_with_random(seed, max_length=20)\n",
     "    print(\"Seed text:\", seed)\n",
     "    print(\"Generated Text:\", generated_text)"
