--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " thank you everybody thank you and vice president mike pence thank you very much incredible and hell...\n"
+      "thank you thank you thank you to vice president pence hes a good guy weve done a great job together ...\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,15 +177,15 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/thibaultgillard/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data]     /home/codespace/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thank everybody thank vice president mike pence thank much incredible hello fayetteville hello fayet...\n"
+      "thank thank thank vice president pence hes good guy weve done great job together merry christmas mic...\n"
      ]
     }
    ],
@@ -667,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -681,12 +681,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "262f45c2f7c4647a52b21fdf148897939a0a772c971848ae3fddd645c697c1d3"
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
    }
   }
  },
