--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,19 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m preprocessing_pipline\n\u001b[1;32m      3\u001b[0m preprocessing \u001b[39m=\u001b[39m preprocessing_pipline(df[\u001b[39m'\u001b[39m\u001b[39mSpeech_Text\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m df[\u001b[39m'\u001b[39m\u001b[39mSpeech_Text_prepro\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m preprocessing\u001b[39m.\u001b[39mpreprocess_light()\n",
-      "File \u001b[0;32m/workspaces/Trump_TextGeneration_NLP_Project/preprocessing.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcorpus\u001b[39;00m \u001b[39mimport\u001b[39;00m stopwords\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtokenize\u001b[39;00m \u001b[39mimport\u001b[39;00m word_tokenize\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mstring\u001b[39;00m \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thank thank thank vice president pence hes good guy weve done great job together merry christmas mic\n",
+      "Thank you. Thank you. Thank you to Vice President Pence. He's a good guy. We've done a great job tog\n",
+      "thank thank thank vice president pence hes good guy weve done great job together merry christmas mic\n"
      ]
     }
    ],
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +119,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.preprocessing.text import Tokenizer\n",
+    "\n",
+    "# Create a tokenizer and fit it on your text corpus\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(text_corpus)\n",
+    "\n",
+    "input = []\n",
+    "output = []"
+   ]
   },
   {
    "attachments": {},
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +148,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
      ]
     },
     {
@@ -150,7 +156,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -162,13 +168,13 @@
     "\n",
     "class my_model_LSTM:\n",
     "    def __init__(self, n, text_corpus):\n",
-    "        self.n = n\n",
+    "        self.n = n \n",
     "        self.text_corpus = text_corpus\n",
     "        self.model = self.build_model()\n",
     "        \n",
     "    def build_model(self):\n",
     "        model = tf.keras.Sequential()\n",
-    "        model.add(Embedding(input_dim=len(self.text_corpus), output_dim=self.n))\n",
+    "        model.add(Embedding(len(self.text_corpus),self.n))\n",
     "        model.add(LSTM(units=self.n))\n",
     "        model.add(Dense(units=len(self.text_corpus), activation='softmax'))\n",
     "        model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
@@ -212,11 +218,101 @@
     "model_LSTM.generate_text('I', num_generate=1000)\n",
     "  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "my_model_LSTM.train() missing 1 required positional argument: 'sequence_length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 66\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[39mreturn\u001b[39;00m (start_string \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(text_generated))\n\u001b[1;32m     65\u001b[0m model_LSTM \u001b[39m=\u001b[39m my_model_LSTM(\u001b[39m256\u001b[39m, text_corpus)\n\u001b[0;32m---> 66\u001b[0m model_LSTM\u001b[39m.\u001b[39;49mtrain(train_corpus, epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m)\n\u001b[1;32m     67\u001b[0m model_LSTM\u001b[39m.\u001b[39mevaluate(test_corpus, test_corpus)\n\u001b[1;32m     68\u001b[0m \u001b[39m##model_LSTM.save('model_LSTM.h5')\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: my_model_LSTM.train() missing 1 required positional argument: 'sequence_length'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.layers import Embedding, LSTM, Dense\n",
+    "\n",
+    "class my_model_LSTM:\n",
+    "    def __init__(self, n, text_corpus):\n",
+    "        self.n = n\n",
+    "        self.text_corpus = text_corpus\n",
+    "        self.tokenizer = Tokenizer()\n",
+    "        self.model = self.build_model()\n",
+    "        \n",
+    "    def build_model(self):\n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(Embedding(input_dim=len(self.text_corpus), output_dim=self.n))\n",
+    "        model.add(LSTM(units=self.n))\n",
+    "        model.add(Dense(units=len(self.text_corpus), activation='softmax'))\n",
+    "        model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "        return model\n",
+    "     \n",
+    "    def preprocess_and_tokenize(self, train_corpus):\n",
+    "        self.tokenizer.fit_on_texts(train_corpus)\n",
+    "        sequences = self.tokenizer.texts_to_sequences(train_corpus)\n",
+    "        padded_sequences = pad_sequences(sequences, padding='post')  # You can specify the maximum sequence length here.\n",
+    "        return padded_sequences\n",
+    "     \n",
+    "    def train(self, train_corpus, sequence_length, epochs=10):\n",
+    "        padded_sequences = self.preprocess_and_tokenize(train_corpus)\n",
+    "        \n",
+    "        # Create input and target sequences\n",
+    "        input_sequences = padded_sequences[:, :-1]\n",
+    "        target_sequences = padded_sequences[:, 1:]\n",
+    "        \n",
+    "        self.model.fit(input_sequences, target_sequences, epochs=epochs)\n",
+    "         \n",
+    "    def predict(self, test_corpus):\n",
+    "        padded_sequences = self.preprocess_and_tokenize(test_corpus)\n",
+    "        return self.model.predict(padded_sequences)\n",
+    "     \n",
+    "    def evaluate(self, test_corpus, test_labels):\n",
+    "        padded_sequences = self.preprocess_and_tokenize(test_corpus)\n",
+    "        return self.model.evaluate(padded_sequences, test_labels)\n",
+    "     \n",
+    "    def save(self, path):\n",
+    "        self.model.save(path)\n",
+    "         \n",
+    "    def load(self, path):\n",
+    "        self.model = tf.keras.models.load_model(path)\n",
+    "         \n",
+    "    def generate_text(self, start_string, num_generate=1000):\n",
+    "        input_eval = self.tokenizer.texts_to_sequences([start_string])[0]\n",
+    "        text_generated = []\n",
+    "        temperature = 1.0\n",
+    "        self.model.reset_states()\n",
+    "        for i in range(num_generate):\n",
+    "            predictions = self.model(input_eval)\n",
+    "            predictions = tf.squeeze(predictions, 0)\n",
+    "            predictions = predictions / temperature\n",
+    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
+    "            input_eval = tf.expand_dims([predicted_id], 0)\n",
+    "            text_generated.append(self.tokenizer.index_word[predicted_id])\n",
+    "        return (start_string + ' '.join(text_generated))\n",
+    "    \n",
+    "    \n",
+    "model_LSTM = my_model_LSTM(256, text_corpus)\n",
+    "model_LSTM.train(train_corpus, epochs=10)\n",
+    "model_LSTM.evaluate(test_corpus, test_corpus)\n",
+    "##model_LSTM.save('model_LSTM.h5')\n",
+    "model_LSTM.load('model_LSTM.h5')\n",
+    "model_LSTM.generate_text('I', num_generate=1000)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -230,12 +326,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "262f45c2f7c4647a52b21fdf148897939a0a772c971848ae3fddd645c697c1d3"
+    "hash": "bc11ff26b6a5fa7a865d8250cd70cfc7d3342e295774ddad3442a38e57bd6f20"
    }
   }
  },
