--- a/main.ipynb
+++ b/main.ipynb
@@ -127,7 +127,30 @@
     "tokenizer.fit_on_texts(text_corpus)\n",
     "\n",
     "input = []\n",
-    "output = []"
+    "output = []\n",
+    "\n",
+    "lenght_of_sequences = 10\n",
+    "\n",
+    "for i in range(lenght_of_sequences, len(train_corpus)):\n",
+    "    input.append(train_corpus[i-lenght_of_sequences:i])\n",
+    "    output.append(train_corpus[i])\n",
+    "\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    " \n",
+    "# Pad your sequences so they are all the same length (the length of the longest sequence) for LSTM\n",
+    "input = pad_sequences(input, maxlen=lenght_of_sequences, padding='pre')\n",
+    " \n",
+    "# Convert your lists of input sequences into numpy arrays\n",
+    "import numpy as np\n",
+    " \n",
+    "input = np.array(input)\n",
+    "output = np.array(output)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split your data into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=0.2, random_state=42)\n",
+    " "
    ]
   },
   {
@@ -217,96 +240,6 @@
     "model_LSTM.load('model_LSTM.h5')\n",
     "model_LSTM.generate_text('I', num_generate=1000)\n",
     "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "my_model_LSTM.train() missing 1 required positional argument: 'sequence_length'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 66\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[39mreturn\u001b[39;00m (start_string \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(text_generated))\n\u001b[1;32m     65\u001b[0m model_LSTM \u001b[39m=\u001b[39m my_model_LSTM(\u001b[39m256\u001b[39m, text_corpus)\n\u001b[0;32m---> 66\u001b[0m model_LSTM\u001b[39m.\u001b[39;49mtrain(train_corpus, epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m)\n\u001b[1;32m     67\u001b[0m model_LSTM\u001b[39m.\u001b[39mevaluate(test_corpus, test_corpus)\n\u001b[1;32m     68\u001b[0m \u001b[39m##model_LSTM.save('model_LSTM.h5')\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: my_model_LSTM.train() missing 1 required positional argument: 'sequence_length'"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "from keras.preprocessing.text import Tokenizer\n",
-    "from keras.preprocessing.sequence import pad_sequences\n",
-    "from keras.layers import Embedding, LSTM, Dense\n",
-    "\n",
-    "class my_model_LSTM:\n",
-    "    def __init__(self, n, text_corpus):\n",
-    "        self.n = n\n",
-    "        self.text_corpus = text_corpus\n",
-    "        self.tokenizer = Tokenizer()\n",
-    "        self.model = self.build_model()\n",
-    "        \n",
-    "    def build_model(self):\n",
-    "        model = tf.keras.Sequential()\n",
-    "        model.add(Embedding(input_dim=len(self.text_corpus), output_dim=self.n))\n",
-    "        model.add(LSTM(units=self.n))\n",
-    "        model.add(Dense(units=len(self.text_corpus), activation='softmax'))\n",
-    "        model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
-    "        return model\n",
-    "     \n",
-    "    def preprocess_and_tokenize(self, train_corpus):\n",
-    "        self.tokenizer.fit_on_texts(train_corpus)\n",
-    "        sequences = self.tokenizer.texts_to_sequences(train_corpus)\n",
-    "        padded_sequences = pad_sequences(sequences, padding='post')  # You can specify the maximum sequence length here.\n",
-    "        return padded_sequences\n",
-    "     \n",
-    "    def train(self, train_corpus, sequence_length, epochs=10):\n",
-    "        padded_sequences = self.preprocess_and_tokenize(train_corpus)\n",
-    "        \n",
-    "        # Create input and target sequences\n",
-    "        input_sequences = padded_sequences[:, :-1]\n",
-    "        target_sequences = padded_sequences[:, 1:]\n",
-    "        \n",
-    "        self.model.fit(input_sequences, target_sequences, epochs=epochs)\n",
-    "         \n",
-    "    def predict(self, test_corpus):\n",
-    "        padded_sequences = self.preprocess_and_tokenize(test_corpus)\n",
-    "        return self.model.predict(padded_sequences)\n",
-    "     \n",
-    "    def evaluate(self, test_corpus, test_labels):\n",
-    "        padded_sequences = self.preprocess_and_tokenize(test_corpus)\n",
-    "        return self.model.evaluate(padded_sequences, test_labels)\n",
-    "     \n",
-    "    def save(self, path):\n",
-    "        self.model.save(path)\n",
-    "         \n",
-    "    def load(self, path):\n",
-    "        self.model = tf.keras.models.load_model(path)\n",
-    "         \n",
-    "    def generate_text(self, start_string, num_generate=1000):\n",
-    "        input_eval = self.tokenizer.texts_to_sequences([start_string])[0]\n",
-    "        text_generated = []\n",
-    "        temperature = 1.0\n",
-    "        self.model.reset_states()\n",
-    "        for i in range(num_generate):\n",
-    "            predictions = self.model(input_eval)\n",
-    "            predictions = tf.squeeze(predictions, 0)\n",
-    "            predictions = predictions / temperature\n",
-    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
-    "            input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "            text_generated.append(self.tokenizer.index_word[predicted_id])\n",
-    "        return (start_string + ' '.join(text_generated))\n",
-    "    \n",
-    "    \n",
-    "model_LSTM = my_model_LSTM(256, text_corpus)\n",
-    "model_LSTM.train(train_corpus, epochs=10)\n",
-    "model_LSTM.evaluate(test_corpus, test_corpus)\n",
-    "##model_LSTM.save('model_LSTM.h5')\n",
-    "model_LSTM.load('model_LSTM.h5')\n",
-    "model_LSTM.generate_text('I', num_generate=1000)\n"
    ]
   }
  ],
