--- a/main.ipynb
+++ b/main.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +135,10 @@
     "    input.append(train_corpus[i-lenght_of_sequences:i])\n",
     "    output.append(train_corpus[i])\n",
     "\n",
+    "input = tokenizer.texts_to_sequences(input)\n",
+    "\n",
+    "# pad \n",
     "from keras.preprocessing.sequence import pad_sequences\n",
-    " \n",
-    "# Pad your sequences so they are all the same length (the length of the longest sequence) for LSTM\n",
     "input = pad_sequences(input, maxlen=lenght_of_sequences, padding='pre')\n",
     " \n",
     "# Convert your lists of input sequences into numpy arrays\n",
@@ -151,6 +152,72 @@
     "# Split your data into train and test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=0.2, random_state=42)\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from keras.layers import Embedding, LSTM, Dense\n",
+    "\n",
+    "class my_model_LSTM:\n",
+    "    def __init__(self, n, num_unique_words, max_sequence_length):\n",
+    "        self.n = n\n",
+    "        self.num_unique_words = num_unique_words\n",
+    "        self.max_sequence_length = max_sequence_length\n",
+    "        self.model = self.build_model()\n",
+    "        \n",
+    "    def build_model(self):\n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(Embedding(self.num_unique_words, self.n))\n",
+    "        model.add(LSTM(units=self.n))\n",
+    "        model.add(Dense(units=self.num_unique_words, activation='softmax'))\n",
+    "        model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "        return model\n",
+    "     \n",
+    "    def train(self, X_train, y_train, epochs=10):\n",
+    "        self.model.fit(X_train, y_train, epochs=epochs)\n",
+    "         \n",
+    "    def predict(self, test_corpus):\n",
+    "        return self.model.predict(test_corpus)\n",
+    "     \n",
+    "    def evaluate(self, X_test, y_test):\n",
+    "        return self.model.evaluate(X_test, y_test)\n",
+    "     \n",
+    "    def save(self, path):\n",
+    "        self.model.save(path)\n",
+    "         \n",
+    "    def load(self, path):\n",
+    "        self.model = tf.keras.models.load_model(path)\n",
+    "         \n",
+    "    def generate_text(self, start_string, num_generate=1000):\n",
+    "        input_eval = [self.text_corpus.index(s) for s in start_string.split()]\n",
+    "        input_eval = tf.expand_dims(input_eval, 0)\n",
+    "        text_generated = []\n",
+    "        temperature = 1.0\n",
+    "        self.model.reset_states()\n",
+    "        for i in range(num_generate):\n",
+    "            predictions = self.model(input_eval)\n",
+    "            predictions = tf.squeeze(predictions, 0)\n",
+    "            predictions = predictions / temperature\n",
+    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
+    "            input_eval = tf.expand_dims([predicted_id], 0)\n",
+    "            text_generated.append(self.text_corpus[predicted_id])\n",
+    "        return (start_string + ' '.join(text_generated))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
+    "model_LSTM.train(X_train, y_train, epochs=10)\n",
+    "\n"
    ]
   },
   {
