--- a/main.ipynb
+++ b/main.ipynb
@@ -215,9 +215,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_unique_words = len(tokenizer.word_index) + 1\n",
+    "max_sequence_length = len(input[0])\n",
     "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=10)\n",
-    "\n"
+    "model_LSTM.train(X_train, y_train, epochs=10)"
    ]
   },
   {
@@ -312,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -326,12 +327,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "bc11ff26b6a5fa7a865d8250cd70cfc7d3342e295774ddad3442a38e57bd6f20"
+    "hash": "262f45c2f7c4647a52b21fdf148897939a0a772c971848ae3fddd645c697c1d3"
    }
   }
  },
