--- a/main.ipynb
+++ b/main.ipynb
@@ -100,14 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text corpus type <class 'list'>\n",
+      "text corpus type <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "text_corpus = [word for speech in df['Speech_Text'].str.split() for word in speech]\n",
     "train_corpus, test_corpus = train_test_split(text_corpus, test_size=0.2, random_state=42)\n",
+    "print(\"text corpus type\",type(text_corpus))\n",
+    "print(\"text corpus type\",type(text_corpus[0]))\n",
+    "\n",
+    "\n",
     "\n",
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
@@ -116,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,11 +149,12 @@
     "    output.append(train_corpus[i])\n",
     "\n",
     "input = tokenizer.texts_to_sequences(input)\n",
+    "output = tokenizer.texts_to_sequences(output)\n",
     "\n",
     "# pad \n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "input = pad_sequences(input, maxlen=lenght_of_sequences, padding='pre')\n",
-    " \n",
+    "output = pad_sequences(output, maxlen=1, padding='pre')\n",
     "# Convert your lists of input sequences into numpy arrays\n",
     "import numpy as np\n",
     " \n",
@@ -156,7 +170,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output: <class 'numpy.ndarray'>\n",
+      "X_train Shape: (296371, 1)\n",
+      "X_train Example Sequence: [46]\n",
+      "y_train Data Type: <class 'numpy.ndarray'>\n",
+      "y_train Shape: (237096, 1)\n",
+      "y_train Example Value: [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"output:\", type(output))\n",
+    "print(\"X_train Shape:\", output.shape)\n",
+    "print(\"X_train Example Sequence:\", output[1])\n",
+    "\n",
+    "print(\"y_train Data Type:\", type(y_train))\n",
+    "print(\"y_train Shape:\", y_train.shape)\n",
+    "print(\"y_train Example Value:\", y_train[0])\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,15 +261,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "7410/7410 [==============================] - 482s 65ms/step - loss: 6.4583 - accuracy: 0.0374\n",
+      "Epoch 2/3\n",
+      "7410/7410 [==============================] - 463s 63ms/step - loss: 6.3809 - accuracy: 0.0379\n",
+      "Epoch 3/3\n",
+      "7410/7410 [==============================] - 482s 65ms/step - loss: 6.3502 - accuracy: 0.0380\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_unique_words = len(tokenizer.word_index) + 1\n",
+    "max_sequence_length = 15\n",
+    "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
+    "model_LSTM.train(X_train, y_train, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "num_unique_words = len(tokenizer.word_index) + 1\n",
-    "max_sequence_length = len(input[0])\n",
-    "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=10)"
-   ]
+   "source": []
   },
   {
    "attachments": {},
