--- a/main.ipynb
+++ b/main.ipynb
@@ -289,7 +289,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test \n",
+    "model_LSTM.evaluate(X_test, y_test)\n",
+    "# print metrics\n",
+    "print(\"LSTM Model Accuracy:\", model_LSTM.evaluate(X_test, y_test)[1])\n",
+    "print(\"LSTM Model Loss:\", model_LSTM.evaluate(X_test, y_test)[0])\n",
+    "# perplextiy\n",
+    "print(\"LSTM Model Perplexity:\", np.exp(model_LSTM.evaluate(X_test, y_test)[0]))"
+   ]
   },
   {
    "attachments": {},
