--- a/main.ipynb
+++ b/main.ipynb
@@ -286,12 +286,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1853/1853 [==============================] - 26s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
+      "1853/1853 [==============================] - 28s 15ms/step - loss: 6.4546 - accuracy: 0.0384\n",
+      "LSTM Model Accuracy: 0.038363561034202576\n",
+      "1853/1853 [==============================] - 27s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
+      "LSTM Model Loss: 6.4545793533325195\n",
+      "1853/1853 [==============================] - 25s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
+      "LSTM Model Perplexity: 635.606304337891\n"
+     ]
+    }
+   ],
    "source": [
     "# test \n",
     "model_LSTM.evaluate(X_test, y_test)\n",
+    "print(model_LSTM.evaluate(X_test, y_test))\n",
     "# print metrics\n",
     "print(\"LSTM Model Accuracy:\", model_LSTM.evaluate(X_test, y_test)[1])\n",
     "print(\"LSTM Model Loss:\", model_LSTM.evaluate(X_test, y_test)[0])\n",
@@ -300,92 +315,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1853/1853 [==============================] - 25s 13ms/step - loss: 6.4546 - accuracy: 0.0384\n",
+      "[6.4545793533325195, 0.038363561034202576]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model_LSTM.evaluate(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/Trump_TextGeneration_NLP_Project/myenv/lib/python3.10/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'my_model_LSTM' object has no attribute 'text_corpus'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model_LSTM\u001b[39m.\u001b[39msave(\u001b[39m'\u001b[39m\u001b[39mmodel_LSTM.h5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m model_LSTM\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mmodel_LSTM.h5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m model_LSTM\u001b[39m.\u001b[39;49mgenerate_text(\u001b[39m'\u001b[39;49m\u001b[39mI\u001b[39;49m\u001b[39m'\u001b[39;49m, num_generate\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[22], line 35\u001b[0m, in \u001b[0;36mmy_model_LSTM.generate_text\u001b[0;34m(self, start_string, num_generate)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_text\u001b[39m(\u001b[39mself\u001b[39m, start_string, num_generate\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m):\n\u001b[0;32m---> 35\u001b[0m     input_eval \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_corpus\u001b[39m.\u001b[39mindex(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m start_string\u001b[39m.\u001b[39msplit()]\n\u001b[1;32m     36\u001b[0m     input_eval \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mexpand_dims(input_eval, \u001b[39m0\u001b[39m)\n\u001b[1;32m     37\u001b[0m     text_generated \u001b[39m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[22], line 35\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_text\u001b[39m(\u001b[39mself\u001b[39m, start_string, num_generate\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m):\n\u001b[0;32m---> 35\u001b[0m     input_eval \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtext_corpus\u001b[39m.\u001b[39mindex(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m start_string\u001b[39m.\u001b[39msplit()]\n\u001b[1;32m     36\u001b[0m     input_eval \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mexpand_dims(input_eval, \u001b[39m0\u001b[39m)\n\u001b[1;32m     37\u001b[0m     text_generated \u001b[39m=\u001b[39m []\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'my_model_LSTM' object has no attribute 'text_corpus'"
+     ]
+    }
+   ],
+   "source": [
+    "model_LSTM.save('model_LSTM.h5')\n",
+    "model_LSTM.load('model_LSTM.h5')\n",
+    "model_LSTM.generate_text('I', num_generate=1000)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# import for LSTM \n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from keras.layers import Embedding, LSTM, Dense\n",
-    "\n",
-    "class my_model_LSTM:\n",
-    "    def __init__(self, n, text_corpus):\n",
-    "        self.n = n \n",
-    "        self.text_corpus = text_corpus\n",
-    "        self.model = self.build_model()\n",
-    "        \n",
-    "    def build_model(self):\n",
-    "        model = tf.keras.Sequential()\n",
-    "        model.add(Embedding(len(self.text_corpus),self.n))\n",
-    "        model.add(LSTM(units=self.n))\n",
-    "        model.add(Dense(units=len(self.text_corpus), activation='softmax'))\n",
-    "        model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
-    "        return model\n",
-    "     \n",
-    "    def train(self, train_corpus, epochs=10):\n",
-    "        self.model.fit(train_corpus, epochs=epochs)\n",
-    "         \n",
-    "    def predict(self, test_corpus):\n",
-    "        return self.model.predict(test_corpus)\n",
-    "     \n",
-    "    def evaluate(self, test_corpus, test_labels):\n",
-    "        return self.model.evaluate(test_corpus, test_labels)\n",
-    "     \n",
-    "    def save(self, path):\n",
-    "        self.model.save(path)\n",
-    "         \n",
-    "    def load(self, path):\n",
-    "        self.model = tf.keras.models.load_model(path)\n",
-    "         \n",
-    "    def generate_text(self, start_string, num_generate=1000):\n",
-    "        input_eval = [self.text_corpus.index(s) for s in start_string.split()]\n",
-    "        input_eval = tf.expand_dims(input_eval, 0)\n",
-    "        text_generated = []\n",
-    "        temperature = 1.0\n",
-    "        self.model.reset_states()\n",
-    "        for i in range(num_generate):\n",
-    "            predictions = self.model(input_eval)\n",
-    "            predictions = tf.squeeze(predictions, 0)\n",
-    "            predictions = predictions / temperature\n",
-    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
-    "            input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "            text_generated.append(self.text_corpus[predicted_id])\n",
-    "        return (start_string + ' '.join(text_generated))\n",
-    "    \n",
-    "model_LSTM = my_model_LSTM(256, text_corpus)\n",
-    "model_LSTM.train(train_corpus, epochs=10)\n",
-    "model_LSTM.evaluate(test_corpus, test_corpus)\n",
-    "model_LSTM.save('model_LSTM.h5')\n",
-    "model_LSTM.load('model_LSTM.h5')\n",
-    "model_LSTM.generate_text('I', num_generate=1000)\n",
-    "  "
    ]
   }
  ],
