--- a/main.ipynb
+++ b/main.ipynb
@@ -244,18 +244,25 @@
     "        self.model = tf.keras.models.load_model(path)\n",
     "         \n",
     "    def generate_text(self, start_string, num_generate=1000):\n",
-    "        input_eval = [self.text_corpus.index(s) for s in start_string.split()]\n",
+    "        # Vectorize your start string using the tokenizer you built earlier\n",
+    "        input_eval = [tokenizer.word_index[word] for word in start_string.split()]\n",
     "        input_eval = tf.expand_dims(input_eval, 0)\n",
+    "         \n",
+    "        # Empty string to store your results\n",
     "        text_generated = []\n",
-    "        temperature = 1.0\n",
+    "         \n",
+    "        # Here batch size == 1\n",
     "        self.model.reset_states()\n",
     "        for i in range(num_generate):\n",
     "            predictions = self.model(input_eval)\n",
     "            predictions = tf.squeeze(predictions, 0)\n",
-    "            predictions = predictions / temperature\n",
+    "             \n",
     "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
+    "             \n",
     "            input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "            text_generated.append(self.text_corpus[predicted_id])\n",
+    "             \n",
+    "            text_generated.append(tokenizer.index_word[predicted_id])\n",
+    "             \n",
     "        return (start_string + ' '.join(text_generated))\n"
    ]
   },
